--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
+
     <RatingBar
+        android:layout_margin="20px"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:numStars="5"
-        android:rating="2"
+        android:stepSize="0.5"
         android:id="@+id/ratingBar1" />
 
     <TextView
+        android:layout_margin="20px"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="rating : "
@@ -19,12 +23,32 @@
 
     <RatingBar
         style="?android:attr/ratingBarStyleIndicator"
+        android:layout_margin="20px"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:numStars="4"
-        android:rating="2.5"
+        android:numStars="10"
+        android:rating="7.5"
         android:id="@+id/ratingBar3" />
 
+    <RatingBar
+        android:layout_margin="5px"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:numStars="10"
+        android:rating="3.5"
+        android:isIndicator="true"
+        android:id="@+id/ratingBar4"
 
+        />
+
+    <RatingBar
+        style="?android:attr/ratingBarStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:numStars="10"
+        android:rating="3.5"
+        android:id="@+id/ratingBar5"
+
+        />
 
 </LinearLayout>
